test-suite/output/ErrorInCanonicalStructures4.out
File "stdin", line 3, characters 0-33:
Error:
Could not declare a canonical structure b.
Got too few arguments to the record or structure constructor.

