test-suite/output/ErrorInCanonicalStructures4.v
Record Foo := MkFoo { field1 : nat; field2 : nat -> nat }.

Canonical Structure b := MkFoo 0.		  
